Closed
Bug 18670
Opened 26 years ago
Closed 26 years ago
[PP] Enter key not accepted by Install Wizard
Categories
(SeaMonkey :: Installer, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: elig, Assigned: samir_bugzilla)
Details
* TITLE/SUMMARY
[PP] Enter key not accepted by Install Wizard
* STEPS TO REPRODUCE
0) Launch Mac OS install wizard
1) Press the "Enter" key (in the lower-right hand corner of your keyboard) upon
being presented with the Mozila Public License.
* RESULT
- What happened
Nothing.
- What was expected
Behavior equivalent to pressing the "Return" Key --- the default button should be
pushed. Mac OS HIG proof available upon request.
* REGRESSION
- Occurs On
Mac OS Apprunner (1999111208-M12)
* CONFIGURATIONS TESTED
- [Mac] Beige Power Mac G3 (266 MHz PowerPC 750), 96 MB RAM (VM on; 1 MB of VM
used), 1024x768 (Thousands of Colors), Mac OS 8.6
- [Win32] Vectra VL (233 MHz P2), 96 MB RAM, 800x600 (True Color), NT 4.0 SP5.
- [Linux] Vectra VL (266 MHz P2), 96 MB RAM. Red Hat Linux 6.0 (GNOME).
| Reporter | ||
Updated•26 years ago
|
Assignee: ssu → sgehani
| Reporter | ||
Comment 1•26 years ago
|
||
[Discussed with sgehani yesterday; since I don't see an active bug for this upon
a query, I've written up and assigned.]
| Assignee | ||
Updated•26 years ago
|
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 2•26 years ago
|
||
Fix checked in.
Updated•26 years ago
|
Status: RESOLVED → VERIFIED
Comment 3•26 years ago
|
||
Mac Installer for 1999111208
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•